# bookclub

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 99c99e0c1abf_initial_models.py
backend/bookclub/: config.py  database.py  endpoints.py  main.py  middlewares.py  models.py  schemas.py
frontend/: Dockerfile  package.json
frontend/src/: App.vue
frontend/src/components/: BookView.vue  BooksView.vue  Navbar.vue
frontend/src/types/: Book.ts
frontend/src/views/: Home.vue
